<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="24dp">

    <!-- Large centered text -->

    <!-- Description text -->

    <!-- Next button -->

    <!-- Skip text -->

    <TextView
        android:id="@+id/titleText"
        android:layout_width="300dp"
        android:layout_height="67dp"
        android:text="@string/take_charge"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:lineSpacingExtra="4sp"
        android:text="@string/start_managing_your_money_with_confidence"
        android:textColor="#666666"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/GSButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/GSButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/primary"
        android:elevation="4dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@color/text_light"
        android:textSize="16sp"
        app:backgroundTint="@color/primary"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>